mule-user-guide/v/3.6/mule-esb-plugin-for-maven.adoc
Maven的=  Mule插件
:keywords: studio, maven, version control, dependencies, libraries, plugin

muleesb-maven-plugin允许您在Maven环境中控制Mule实例。它是使用Maven开发Mule应用程序框架的一部分，您可以在 link:/mule-user-guide/v/3.6/using-maven-with-mule[和Mule一起使用Maven]中找到它的概述。该插件允许您：

* 将Mule应用程序部署到本地独立服务器
* 在本地独立部署中运行集成测试
* 启动，停止并重新启动本地独立服务器
* 在本地集群部署中运行集成测试

该插件支持社区版和企业版。

== 假设

本文档假定您熟悉Maven，管理pom.xml文件以及使用Maven插件。 （如果您刚开始使用Maven，我们建议您遵循 http://maven.apache.org/guides/getting-started/[Maven的入门教程]。）此外，本文档假定您熟悉在Maven中开发Mule应用程序。有关Mule和Maven的更多信息，请参阅 link:/mule-user-guide/v/3.6/using-maven-with-mule[和Mule一起使用Maven]。

== 添加插件

=== 为插件添加Maven依赖项

编辑您的`settings.xml`或项目文件以包含以下内容：

[source, xml, linenums]
----
<plugin>
  <groupId>org.mule.tools</groupId>
  <artifactId>muleesb-maven-plugin</artifactId>
  <version>1.0</version>
</plugin>
----

=== 添加Maven仓库

该插件的存储库位于https://repository.mulesoft.org/nexus/content/repositories/releases/。要将其添加到Maven安装中，请编辑您的`settings.xml`或项目文件以包含以下内容：

[source, xml, linenums]
----
<pluginRepositories>
    <pluginRepository>
        <id>mule-ee-public</id>
        <url>https://repository.mulesoft.org/nexus/content/repositories/releases</url>
        <snapshots>
            <enabled>false</enabled>
        </snapshots>
    </pluginRepository>
</pluginRepositories>
----

您还可以在插件的 link:https://repository.mulesoft.org/nexus/content/repositories/releases/org/mule/tools/muleesb-maven-plugin/1.0/[在线存储库]处手动查找插件.jar和POM文件。

== 一个简单的例子

本节介绍插件的最简单用法。在这种情况下，你已经安装了Mule并且已经构建了一个Mule应用程序。下面列出的配置会使插件在预集成测试阶段运行并执行以下操作：

* 将应用程序部署到配置的Mule服务器
* 如果Mule没有运行，请启动它

[source, xml, linenums]
----
...
<plugins>
    <plugin>
        <groupId>org.mule.tools</groupId>
        <artifactId>muleesb-maven-plugin</artifactId>
        <version>1.0</version>
        <configuration>
            <muleHome>${mule.home}</muleHome>
            <applications>
                <application>${app.location}</application>
            </applications>
        </configuration>
        <executions>
            <execution>
                <id>deploy</id>
                <goals>
                    <goal>start</goal>
                </goals>
            </execution>
        </executions>
    </plugin>
</plugins>
...
----

在上面的示例中，`mule.home`是本地Mule独立安装的完整路径，`app.location`是Mule应用程序的完整路径。

[NOTE]
要使上述示例有效，您需要在您的`settings.xml`或您的`pom.xml`中定义Mule ESB存储库。有关详情，请参阅 link:/mule-user-guide/v/3.6/using-maven-with-mule[和Mule一起使用Maven]和 link:/mule-user-guide/v/3.6/configuring-maven-to-work-with-mule-esb[配置Maven以使用Mule]。

== 将Mule定义为Maven依赖项

而不是使用现有的Mule服务器，您可以使插件从Maven存储库下载并安装Mule独立版。为此，请按如下所示配置插件。

[source, xml, linenums]
----
...
<plugin>
    <groupId>org.mule.tools</groupId>
    <artifactId>muleesb-maven-plugin</artifactId>
    <configuration>
        <muleDistribution>
            <groupId>com.mulesoft.muleesb.distributions</groupId>
            <artifactId>mule-ee-distribution-standalone</artifactId>
            <version>${mule.version}</version>
            <type>tar.gz</type>
        </muleDistribution>
        <applications>
            <application>${app.1.location}</application>
            <application>${app.2.location}</application>
        </applications>
    </configuration>        
</plugin>
...
----

您可以省略`groupId`和`artifactId`，而不是指定完整的Maven坐标，只定义Mule版本。通过这种方式，该插件将使用官方的MuleSoft组和工件标识符CE或EE版本。该配置如下所示：

[source, xml, linenums]
----
...
<plugin>
    <groupId>org.mule.tools</groupId>
    <artifactId>muleesb-maven-plugin</artifactId>
    <configuration>
        <muleVersion>3.6.0</muleVersion>
        <applications>
...
----

== 运行集成测试

插件最重要的用途之一是在集成应用程序上运行集成测试。该插件在`src/it/example-integration-tests`中包含一个完整的工作示例。 （要查看示例的POM，请点击下面。）

 工作示例POM

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.mule.tools.muleesb.it</groupId>
    <artifactId>example-deploy-test</artifactId>
    <version>1.0</version>
    <packaging>mule</packaging>

    <description>Using the plugin for integration tests</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.mule.tools</groupId>
                <artifactId>maven-mule-plugin</artifactId>
                <version>1.7</version>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>@project.groupId@</groupId>
                <artifactId>@project.artifactId@</artifactId>
                <version>@project.version@</version>
                <configuration>
                    <arguments>
                        <argument>-M-Dhttp.port=${http.port}</argument>
                    </arguments>
                    <muleVersion>${mule.version}</muleVersion>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>deploy</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>stop</id>
                        <goals>
                            <goal>stop</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.16</version>
                <executions>
                    <execution>
                        <id>integration-test</id>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
----

要打包，测试并将您的项目部署到Mule，您需要完成以下任务：

* 使用maven-mule-plugin将您的项目打包成Mule应用程序格式
* 使用maven-failsafe-plugin运行集成测试和报告
* 使用mulees-maven-plugin将打包的应用程序部署到从Maven存储库下载的新Mule中

在这种情况下，您只能指定Mule版本和Mule Standalone的参数。该插件将从已配置的Maven存储库下载默认版本的Mule Enterprise Edition，对其进行解压缩并从项目中部署打包的应用程序。默认情况下，要执行的目标是`pre-integration-test`和`post-integration-test`。

下面是示例代码，展示了如何配置maven-failsafe插件，以便在运行`mvn verify`时，它会在后期集成测试阶段停止Mule Standalone。

 示例代码

[source, xml, linenums]
----
<plugin>
    <groupId>@project.groupId@</groupId>
    <artifactId>@project.artifactId@</artifactId>
    <version>@project.version@</version>
    <configuration>
        <arguments>
            <argument>-M-Dhttp.port=${http.port}</argument>
        </arguments>
        <muleVersion>${mule.version}</muleVersion>
    </configuration>
    <executions>
        <execution>
            <goals>
                <goal>deploy</goal>
            </goals>
        </execution>
        <execution>
            <id>stop</id>
            <goals>
                <goal>stop</goal>
            </goals>
        </execution>
    </executions>
</plugin>
----

== 完整示例

本示例中，该插件与外部Mule独立部署一起使用，并执行以下操作：

* 配置两个要部署的应用程序
+
代码：
+
[source, xml, linenums]
----
<applications>
   <application>/home/mule/apps/sampleApp1</application>
   <application>/home/mule/apps/sampleApp2</application>
</applications>
----
+
* 将两个外部库添加到服务器
+
代码：
+
[source, xml, linenums]
----
<libs>
   <lib>/home/mule/libs/activemq-all-5.5.0.jar</lib>
   <lib>/home/mule/libs/activemq-core.jar</lib>
</libs>
----
+
* 添加要部署的域
+
代码：
+
[source, xml, linenums]
----
<domain>/home/mule/mvn/thisproject/domain</domain>
----
+
* 指定在启动Mule服务器之前运行的脚本
+
代码：
+
[source, xml, linenums]
----
<script>/home/mule/mvn/thisproject/script.groovy</script>
----


完整的代码如下所示。

[source, xml, linenums]
----
...
<plugin>
    <groupId>org.mule.tools</groupId>
    <artifactId>muleesb-maven-plugin</artifactId>
    <configuration>
        <muleHome>/home/mule/mule-standalone-3.6.0</muleHome>     <!-- (1) -->
        <applications>
            <application>/home/mule/apps/sampleApp1</application>
            <application>/home/mule/apps/sampleApp2</application>  <!-- (2) -->
        </applications>
        <libs>
          <lib>/home/mule/libs/activemq-all-5.5.0.jar</lib>
          <lib>/home/mule/libs/activemq-core.jar</lib>         <!-- (3) -->
        </libs>
        <arguments>
            <argument>-M-Dport.1=1337</argument>
            <argument>-M-Dport.2=1338</argument>          <!-- (4) -->
        </arguments>
        <domain>/home/mule/mvn/thisproject/domain</domain>         <!-- (5) -->
        <script>/home/mule/mvn/thisproject/script.groovy</script>  <!-- (6) -->
    </configuration>
    <executions>
        <execution>
            <id>deploy</id>
            <phase>pre-integration-test</phase>
            <goals>
                <goal>deploy</goal>                       <!-- (7) -->
            </goals>
        </execution>
        <execution>
            <id>stop</id>
            <phase>post-integration-test</phase>
            <goals>
                <goal>stop</goal>                         <!-- (8) -->
            </goals>
        </execution>
    </executions>
</plugin>
...
----

评论参考：

[%header%autowidth.spread]
|===
|无。 |说明 |注意
| 1  |设置您的Mule根文件夹，在这种情况下为`/home/mule/mule-standalone-3.6.0`。 | 
| 2  |这两个子元素定义了部署到Mule实例的Mule应用程序。使用此参数定义的应用程序可以是可部署的Mule应用程序zip文件或分解的Mule应用程序文件夹 |可选
| 3  |将外部库添加到Mule独立版 |可选
| 4  | Mule服务器的参数 |可选
| 5  |要部署的域。要将该应用程序添加到域中，您必须手动配置应用程序 |可选
| 6  | Groovy脚本在第一次执行插件之前执行 |可选
| 7  |执行目标。使用`start`目标在所需阶段启动Mule实例。 | 
| 8  |执行目标。使用`stop`目标在所需阶段停止Mule实例。 | 
|===

== 部署到Mule群集

使用与上一节中详述的类似的配置，您可以使用该插件来使用Mule群集。该插件使用您指定的节点数为您创建群集。

[source, xml, linenums]
----
<plugin>
    <groupId>org.mule.tools</groupId>
    <artifactId>muleesb-maven-plugin</artifactId>
    <configuration>
        <muleDistribution>
            <groupId>com.mulesoft.muleesb.distributions</groupId>
            <artifactId>mule-ee-distribution-standalone</artifactId>
            <version>3.6.0</version>           <!-- (1) -->
            <type>tar.gz</type>
        </muleDistribution>
        <clusterSize>2</clusterSize>                     <!-- (2) -->
        <applications>
            <application>/home/mule/apps/sampleApp1</application>
            <application>/home/mule/apps/sampleApp2</application>
        </applications>
        <libs>
          <lib>/home/mule/libs/activemq-all-5.5.0.jar</lib>
          <lib>/home/mule/libs/activemq-core.jar</lib>
        </libs>
        <arguments>
            <argument>-M-Dport.1=1337</argument>
            <argument>-M-Dport.2=1338</argument>
        </arguments>
    </configuration>
    <executions>
        <execution>
            <id>clusterDeploy</id>
            <phase>pre-integration-test</phase>
            <goals>
                <goal>clusterDeploy</goal>                <!-- (3) -->
            </goals>
        </execution>
        <execution>
            <id>clusterStop</id>
            <phase>post-integration-test</phase>
            <goals>
                <goal>clusterStop</goal>                  <!-- (4) -->
            </goals>
        </execution>
    </executions>
</plugin>
----

[%header%autowidth.spread]
|===
|无。 |说明 |注意
| 1  |要使用的Mule ESB版本。 | 
| 2  |组成群集的节点数量。 | 
| 3  |执行目标。要启动群集，请使用`clusterDeploy`目标。 | 
| 4  |执行目标。要停止群集，请使用`clusterStop`目标。 | 
|===

== 跳过插件执行

设置为true时，`skip`参数会导致跳过插件执行。该参数适用于所有插件目标。它通常设置为`skipTests`，以避免在不希望测试运行的情况下必须准备测试基础架构。

[source, xml, linenums]
----
<plugin>
    <groupId>org.mule.tools</groupId>
    <artifactId>muleesb-maven-plugin</artifactId>
    <executions>
        <execution>
            <id>deploy</id>
            <phase>pre-integration-test</phase>
            <goals>
                <goal>deploy</goal>
            </goals>
            <configuration>
                <muleHome>/home/mule/mule-standalone-3.6.0</muleHome>
                <skip>${skipTests}</skip>
            </configuration>
        </execution>
    </executions>
</plugin>
----

== 另请参阅

* 有关使用Maven开发Mule应用程序的更多信息，请参阅 link:/mule-user-guide/v/3.6/using-maven-with-mule[和Mule一起使用Maven]和 link:/anypoint-studio/v/5/building-a-mule-application-with-maven-in-studio[在Studio中使用Maven构建一个Mule应用程序]中的概述。
* 了解如何 link:/anypoint-studio/v/5/importing-a-maven-project-into-studio[将现有的Maven项目导入Anypoint Studio]。
* 访问其他Maven link:/mule-user-guide/v/3.6/maven-reference[参考]和/mule-user-guide/v/3.6/configuring-maven-to-work-with-mule-esb[configuration]信息。
